# dlib-android

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.gradle  build.py  build_push.py  buildandRun.sh  cleanbuild.sh  envsetup  so2AndroidJnilibs.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
data/: person.svm
jni/: .Android.mk.swp  Android.mk  Application.mk
jni/dlib/: Android.mk
jni/dlib/dlib/: Anroid.mk
jni/jni_common/: Android.mk  jni_utils.cpp  jni_utils.h  rgb2yuv.cpp  rgb2yuv.h  yuv2rgb.cpp
jni/jni_detections/: Android.mk  detector.h  jni_face_det.cpp  jni_imageutils.cpp  jni_pedestrian_det.cpp
jni/jni_detections/common/: jni_bitmap2mat.cpp  jni_bitmap2mat.h  jni_fileutils.cpp  jni_fileutils.h  jni_utils.cpp  rgb2yuv.cpp  rgb2yuv.h  types.h  yuv2rgb.cpp  yuv2rgb.h
jni/jnilib_ex/: Android.mk  README.md  detector.h  imageutils_jni.cpp  jni_face_det.cpp  jni_face_landmark.cpp  jni_people_det.cpp  people_det.cpp
jni/jnilib_ex/common/: bitmap2mat.cpp  bitmap2mat.h  fileutils.cpp  fileutils.h  jni_fileutils.cpp  jni_fileutils.h  jni_primitives.h  rgb2yuv.cpp  rgb2yuv.h  types.h  yuv2rgb.cpp  yuv2rgb.h
jni/other_daemon_ex/: Android.mk  README.md  face_landmark_detection_ex.cpp
jni/other_ex/: Android.mk  README.md  TestSelectiveSearch.cpp  face_landmark_detection_ex.cpp
jni/tests/: Android.mk  README.md  TestSelectiveSearch.cpp  face_landmark_detection_ex.cpp
libs/arm64-v8a/: face_landmark  max_cost_assignment_ex  svm_ex  svr_ex
libs/armeabi-v7a/: TestSelectiveSearch  face_landmark  max_cost_assignment_ex  svm_ex  svr_ex
libs/x86/: TestSelectiveSearch  face_landmark  max_cost_assignment_ex  svm_ex  svr_ex
libs/x86_64/: face_landmark  max_cost_assignment_ex  svm_ex  svr_ex
opencv/jni/: OpenCVConfig.cmake  OpenCVModules_armeabi-release.cmake  OpenCVModules_armeabi.cmake  OpenCVModules_armeabi_v7a-release.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_mips-release.cmake  OpenCVModules_mips.cmake  OpenCVModules_mips64-release.cmake  OpenCVModules_mips64.cmake  OpenCVModules_x86-release.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64.cmake
tools/formatter/: .clang-format  format.sh
tools/lint/: cpplint.py  lint.sh
tools/travis-ci/: setupNDK.sh
travis-ci/: setupNDK.sh
(+36 files in other folders)
